--- a/postcube.cz/src/stylesheets/main.scss
+++ b/postcube.cz/src/stylesheets/main.scss
@@ -52,7 +52,7 @@ svg {
 // For Similar Sections of Icons and Text //
 .icon-section {
     text-align: center;
-    padding: 4em 0 6em;
+    padding: 4em 1em 6em;
   .icon-section__content {
     max-width: 280px;
     margin: 0 auto;
