PostCube - Header v Mobilní verzi

--- a/postcube.cz/src/html/components/header.njk
+++ b/postcube.cz/src/html/components/header.njk
@@ -1,7 +1,8 @@
 <header class="app-bar">
   <div class="mdc-layout-grid layout-wrapper">
     <div class="mdc-layout-grid__inner">
-      <div class="app-bar__logo mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-3-desktop">
+      <div
+        class="app-bar__logo mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-3-desktop">
         <a class="logo logo__hp logo--desktop" href="/" title="Go to homepage">
           <svg xmlns="http://www.w3.org/2000/svg" width="286.628" height="286.626" viewBox="0 0 286.628 286.626">
             <defs>
@@ -76,7 +77,25 @@
             <li class=""><a href="#how-it-works">Jak box funguje</a></li>
             <li class=""><a href="/o-nas">Kontakt</a></li>
             <li class=""><a class="list__btn" href="/konfigurator">Objednat box</a></li>
-            <li class=""><a class="list__lang--cz" href="/">CZ</a></li>
+            <li class="header--social">
+              <a class="list__lang--cz" href="/">CZ</a>
+              <a href="#" title="PostCube on Facebook" rel="me" class="social-icons social-icons--fb">
+                <svg width="36" height="35" viewBox="0 0 36 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path id="facebook-brands"
+                        d="M35.5761 17.2941C35.5761 7.74051 27.8356 0 18.2819 0C8.72832 0 0.987793 7.74051 0.987793 17.2941C0.987793 25.9258 7.31201 33.0806 15.5797 34.379V22.2934H11.1865V17.2941H15.5797V13.4838C15.5797 9.14985 18.1599 6.75587 22.1118 6.75587C24.0043 6.75587 25.9834 7.09338 25.9834 7.09338V11.3472H23.8021C21.6543 11.3472 20.9841 12.6805 20.9841 14.048V17.2941H25.7805L25.0134 22.2934H20.9841V34.379C29.2519 33.0806 35.5761 25.9258 35.5761 17.2941H35.5761Z"
+                        fill="white"/>
+                </svg>
+              </a>
+              <a href="#" title="PostCube on Instagram" rel="me" class="social-icons social-icons--ig">
+                <svg width="35" height="35" viewBox="0 0 35 35" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path id="instagram-brands" fill-rule="evenodd" clip-rule="evenodd" d="M17.914 8.66043C13.0645 8.66043 9.15294 12.572 9.15294 17.4214C9.15294 22.2709 13.0645 26.1825 17.914 26.1825C22.7634 26.1825 26.675 22.2709 26.675 17.4214C26.675 12.572 22.7634 8.66043 17.914 8.66043ZM17.914 23.1172C14.7801 23.1172 12.2182 20.5629 12.2182 17.4214C12.2182 14.28 14.7725 11.7256 17.914 11.7256C21.0554 11.7256 23.6098 14.28 23.6098 17.4214C23.6098 20.5629 21.0478 23.1172 17.914 23.1172H17.914ZM29.0769 8.30205C29.0769 9.43817 28.1619 10.3455 27.0334 10.3455C25.8973 10.3455 24.9899 9.43054 24.9899 8.30205C24.9899 7.17357 25.9049 6.25859 27.0334 6.25859C28.1619 6.25859 29.0769 7.17358 29.0769 8.30205ZM34.8794 10.376C34.7498 7.6387 34.1245 5.21398 32.1192 3.21625C30.1215 1.21853 27.6967 0.593278 24.9594 0.456028C22.1382 0.295908 13.6821 0.295908 10.8609 0.456028C8.13119 0.585658 5.70647 1.2109 3.70111 3.20863C1.69576 5.20635 1.07814 7.63107 0.940891 10.3684C0.780771 13.1896 0.780771 21.6456 0.940891 24.4669C1.07051 27.2042 1.69576 29.6289 3.70111 31.6266C5.70646 33.6244 8.12356 34.2496 10.8609 34.3869C13.6821 34.547 22.1382 34.547 24.9594 34.3869C27.6967 34.2572 30.1215 33.632 32.1192 31.6266C34.1169 29.6289 34.7422 27.2042 34.8794 24.4669C35.0395 21.6456 35.0395 13.1972 34.8794 10.376ZM31.2347 27.4939C30.64 28.9884 29.4886 30.1398 27.9865 30.7421C25.7371 31.6343 20.3997 31.4284 17.914 31.4284C15.4283 31.4284 10.0832 31.6266 7.84146 30.7421C6.34698 30.1474 5.19561 28.996 4.59325 27.4939C3.70114 25.2446 3.90701 19.9072 3.90701 17.4214C3.90701 14.9357 3.70876 9.59067 4.59325 7.34896C5.18799 5.85448 6.33936 4.70311 7.84146 4.10075C10.0908 3.20864 15.4283 3.41451 17.914 3.41451C20.3997 3.41451 25.7448 3.21626 27.9865 4.10075C29.481 4.69549 30.6323 5.84686 31.2347 7.34896C32.1268 9.5983 31.9209 14.9357 31.9209 17.4214C31.9209 19.9072 32.1268 25.2522 31.2347 27.4939Z" fill="white"/>
+                </svg>
+              </a>
+            </li>
+            <li class="header--policy">
+              <a href="/PP">Privacy policy</a>
+              <a href="/TC">Terms & Conditions</a>
+            </li>
           </ul>
         </nav>
       </div>
