[www.hackercamp.cz] Updated texts

--- a/www.hackercamp.cz/src/html/index.njk
+++ b/www.hackercamp.cz/src/html/index.njk
@@ -771,6 +771,10 @@
 <div class="hc-code-bg">
   <section id="kolik" class="mdc-layout-grid hc-price-list">
     <h2 id="toc-co-to-bude-stat">Co to bude stát?</h2>
+    <div class="hc-price-list__text">
+      <p>Na akci neplánujeme vydělávat, zároveň ji chceme tvořit bez velkých
+        komerčních sponzorů.</p>
+    </div>
     <div class="mdc-layout-grid__inner">
       <article
         property="offers" typeof="Offer"
@@ -802,9 +806,8 @@
         <div class="hc-price-list__value hc-text--gay">
           <data value="2500" property="price">2&nbsp;500</data>&nbsp;<data value="CZK" property="currency">Kč</data>
         </div>
-        <p>
-          Zvýhodněné vstupné (pro neziskové organizace a studenty)
-        </p>
+        <p>Přijedu, ale rád využiju zvýhodněné vstupné. Studuju (a prokážu se
+          ISICem na místě), nebo pracuju v&nbsp;neziskovce.</p>
       </article>
 
       <article
@@ -854,10 +857,8 @@
         <div class="hc-price-list__value hc-text--gay">
           <data value="5000" property="price">5&nbsp;000</data>&nbsp;<data value="CZK" property="currency">Kč</data>
         </div>
-        <p>
-          Na akci neplánujeme vydělávat, zároveň ji chceme tvořit bez velkých
-          komerčních sponzorů. Cena tedy půjde na pokrytí nákladů.
-        </p>
+        <p>Zaplatím klasické vstupné. Přispěju tak na pokrytí nákladů na
+          svoji&nbsp;účast.</p>
       </article>
 
       <article
@@ -892,9 +893,10 @@
         <div class="hc-price-list__value hc-text--gay">
           <data value="7500" property="price">7&nbsp;500</data>&nbsp;<data value="CZK" property="currency">Kč</data>
         </div>
-        <p>
-          Normální vstupné + příspěvek na vstupné pro neziskové organizace a studenty.
-        </p>
+        <p>Kromě svého vstupného a ubytka i&nbsp;přispěju na to, aby mohl za lepší
+          cenu dorazit student, nebo někdo z&nbsp;neziskovky. Mě neubude a jim to
+          pomůže&nbsp;🙂</p>
+
       </article>
 
       <article
