--- a/postcube.cz/src/html/components/get-app.njk
+++ b/postcube.cz/src/html/components/get-app.njk
@@ -10,7 +10,7 @@
       <div class="mdc-layout-grid__inner">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
           <button class="mdc-button content-btn" type="button">
-            <a href="#" class="mdc-button__label">Stáhnout pro iPhone</a>
+            <a href="#" class="mdc-button__label">Stáhnout pro Android</a>
           </button>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
