PostCube - new texts in "o nas"

--- a/postcube.cz/src/html/o-nas/index.njk
+++ b/postcube.cz/src/html/o-nas/index.njk
@@ -141,16 +141,11 @@
                width="180px" height="180px">
         </div>
         <div class="team__member--details mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop">
-          <h3>Jan Slavíček</h3>
-          <p>Historicky působil v&nbsp;desítkách společností napříč segmenty (Česká
-            pošta, ČS,a.s., ČSOB pojišťovna, Austin Power, Novatop, Zátiší Group,
-            Ista ČR, Collect Point, Steiner transocean).</p>
-          <p>V&nbsp;současné době doplňuje svoje podnikání stavbou interních systémů
-            vzdělávání ve společnostech, které to považují za zásadní pro svůj
-            další růst (Etnetera, MeDitorial, testuj.to,&nbsp;ADM).</p>
-          <p>Spolupracuje na Interim a Expertní úrovni s&nbsp;Moravskoslezkým inovačním
-            centrem MSIC na poli komerčních služeb a Founders 4&nbsp;Founders Clubu.
-            Facilituje několik Leadership Master Mindových&nbsp;kruhů.</p>
+          <h3>Lakum</h3>
+          <p>Lakum je skupina strojírenských specialistů. Dává plechu život od roku 1998. Poskytuje kompletní servis v oblasti zpracování plechů, trubek, drátů a povrchových úprav. V několika výrobních závodech v České republice a na Slovensku zaměstnává přes 400 kolegů.
+</p>
+          <p>Profesionální práci Lakumu důvěřují značky jako Audi, Bentley, McLaren, BMW, Škoda Auto a jiní světově známí výrobci automobilů.
+</p>
         </div>
         <div class="team__member--photo mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
           <img alt="Logo Firmy TopMonks"
@@ -158,16 +153,8 @@
                width="180px" height="180px">
         </div>
         <div class="team__member--details mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop">
-          <h3>Jan Slavíček</h3>
-          <p>Historicky působil v&nbsp;desítkách společností napříč segmenty (Česká
-            pošta, ČS,a.s., ČSOB pojišťovna, Austin Power, Novatop, Zátiší Group,
-            Ista ČR, Collect Point, Steiner transocean).</p>
-          <p>V&nbsp;současné době doplňuje svoje podnikání stavbou interních systémů
-            vzdělávání ve společnostech, které to považují za zásadní pro svůj
-            další růst (Etnetera, MeDitorial, testuj.to,&nbsp;ADM).</p>
-          <p>Spolupracuje na Interim a Expertní úrovni s&nbsp;Moravskoslezkým inovačním
-            centrem MSIC na poli komerčních služeb a Founders 4&nbsp;Founders Clubu.
-            Facilituje několik Leadership Master Mindových&nbsp;kruhů.</p>
+          <h3>TopMonks, s.r.o.</h3>
+          <p>Stavíme softwarové firmy od základu. Spojujeme vývoj softwaru a moderních webových aplikací s hardwarem.</p>
         </div>
       </div>
     </div>
