minor text changes

--- a/www.hackercamp.cz/src/html/index.njk
+++ b/www.hackercamp.cz/src/html/index.njk
@@ -436,7 +436,7 @@
           Zažijte nultý ročník netradičního třídenního festivalu pro lidi
           z&nbsp;české tech scény.
         </p>
-        <p>2. &ndash; 5. září 2021 na Sobeňáku</p>
+        <p>2.&ndash;5. září 2021 na Sobeňáku</p>
         <p>
           <a
             href="https://docs.google.com/forms/d/e/1FAIpQLSeDdZ5ZLSxS6lVXM4jshT8fBFQkMVww3jT5etoAPf8aK0yK0A/viewform"
@@ -893,7 +893,7 @@
         <div class="hc-price-list__value hc-text--gay">
           <data value="7500" property="price">7&nbsp;500</data>&nbsp;<data value="CZK" property="currency">Kč</data>
         </div>
-        <p>Kromě svého vstupného a ubytka i&nbsp;přispěju na to, aby mohl za lepší
+        <p>Kromě svého vstupného přispěju i&nbsp;na to, aby mohl za lepší
           cenu dorazit student, nebo někdo z&nbsp;neziskovky. Mě neubude a jim to
           pomůže&nbsp;🙂</p>
 
@@ -936,7 +936,7 @@
     <div class="hc-price-list__text">
       <p>Cena vstupenky obsahuje: vstup na camp (program), ubytování - chatky nebo stany, koncerty, další doprovodný
         program, snídaně každé ráno po dobu trvání campu.
-        Vstupenky jsou jednotné (platí po celou dobu trvání campu 2. - 5. 9. 2021)</p>
+        Vstupenky jsou jednotné (platí po celou dobu trvání campu 2.-5. 9. 2021)</p>
     </div>
   </section>
 
