--- a/postcube.cz/src/html/konfigurator/index.njk
+++ b/postcube.cz/src/html/konfigurator/index.njk
@@ -143,7 +143,8 @@
     }
 
     .order-preview__container:before {
-      content:"" position: absolute;
+      content:"";
+      position: absolute;
       bottom: 0;
       left: 0;
       border-left: 80px solid white;
