Complete links to configurator screen

--- a/postcube.cz/src/html/domacnosti/index.njk
+++ b/postcube.cz/src/html/domacnosti/index.njk
@@ -104,7 +104,7 @@
           aplikace vás pak sama upozorní, že balík právě přišel.</p>
       </div>
       <div class="action-btn mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <a href="#contact" class="action-btn__label">Objednat PostCube</a>
+        <a href="/konfigurator" class="action-btn__label">Objednat PostCube</a>
       </div>
     </div>
   </section>
