--- a/postcube.cz/src/html/index.njk
+++ b/postcube.cz/src/html/index.njk
@@ -153,7 +153,7 @@
           k&nbsp;internetu, klíč ani si pamatovat PIN&nbsp;kód.</p>
       </div>
       <div class="action-btn mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <a href="#contact" class="action-btn__label">Objednat PostCube</a>
+        <a href="/konfigurator" class="action-btn__label">Objednat PostCube</a>
       </div>
     </div>
   </section>
