--- a/postcube.cz/src/html/components/how-it-works.njk
+++ b/postcube.cz/src/html/components/how-it-works.njk
@@ -82,7 +82,7 @@
         údaje a balík vložit do&nbsp;boxu.</p>
     </div>
     <div class="action-btn mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-      <a href="#contact" class="action-btn__label">Objednat PostCube</a>
+      <a href="/konfigurator" class="action-btn__label">Objednat PostCube</a>
     </div>
   </div>
 </section>
