--- a/postcube.cz/src/html/components/why-pc.njk
+++ b/postcube.cz/src/html/components/why-pc.njk
@@ -86,7 +86,7 @@
     </div>
 
     <div class="action-btn mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-      <a href="#contact" class="action-btn__label">Objednat PostCube</a>
+      <a href="/konfigurator" class="action-btn__label">Objednat PostCube</a>
     </div>
   </div>
 </section>
