--- a/postcube.cz/src/html/firmy/index.njk
+++ b/postcube.cz/src/html/firmy/index.njk
@@ -102,7 +102,7 @@
           otevřete pohodlně přes Bluetooth ve svém mobilním telefonu.</p>
       </div>
       <div class="action-btn mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <a href="#contact" class="action-btn__label">Objednat PostCube</a>
+        <a href="/konfigurator" class="action-btn__label">Objednat PostCube</a>
       </div>
     </div>
   </section>
