--- a/postcube.cz/src/html/components/get-app.njk
+++ b/postcube.cz/src/html/components/get-app.njk
@@ -23,7 +23,7 @@
     <div class="get-app__bg mdc-layout-grid__cell mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-5-desktop">
       <img alt="Fotografie iPhonů"
            src="https://res.cloudinary.com/topmonks/image/upload/v1620732837/postcube.cz/iphone_bg.png" width="580px"
-           height="auto">
+           height="690px">
     </div>
   </div>
 </section>
