--- a/postcube.cz/src/html/index.njk
+++ b/postcube.cz/src/html/index.njk
@@ -91,6 +91,9 @@
   </section>
   <section id="" class="about icon-section mdc-layout-grid">
     <div class="mdc-layout-grid__inner layout-wrapper">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <h2>Doručení i&nbsp;vyzvednutí je s&nbsp;PostCube hračka.</h2>
+      </div>
       <div class="icon-section__content mdc-layout-grid__cell">
         <svg xmlns="http://www.w3.org/2000/svg" width="30.412" height="48.659" viewBox="0 0 30.412 48.659">
           <defs>
